{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 97,
  "lineage": "564fb0c6-30e6-4ff1-56b0-2ca6c27f6b07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "MyEIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f77057b32234a079",
            "association_id": "eipassoc-0288e945dda304dd6",
            "domain": "vpc",
            "id": "eipalloc-0f77057b32234a079",
            "instance": "i-051d3d199ebb1e206",
            "network_border_group": "us-east-2",
            "network_interface": "eni-064365827a3aa48c4",
            "private_dns": "ip-10-0-0-13.us-east-2.compute.internal",
            "private_ip": "10.0.0.13",
            "public_dns": "ec2-3-20-17-196.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.17.196",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.MyEC21",
            "aws_security_group.WEBSG",
            "aws_subnet.MySubnet1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "MyEIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047274ba918ca5d0d",
            "association_id": "eipassoc-029c6b8a015d01667",
            "domain": "vpc",
            "id": "eipalloc-047274ba918ca5d0d",
            "instance": "i-02e425a601a33a1e1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-007b0c38697cd8cdb",
            "private_dns": "ip-10-0-1-33.us-east-2.compute.internal",
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-3-18-117-39.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.117.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.MyEC22",
            "aws_security_group.WEBSG",
            "aws_subnet.MySubnet2",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyEC21",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083eed19fc801d7a4",
            "arn": "arn:aws:ec2:us-east-2:309351180660:instance/i-051d3d199ebb1e206",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051d3d199ebb1e206",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064365827a3aa48c4",
            "private_dns": "ip-10-0-0-13.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.13",
            "public_dns": "ec2-18-219-158-253.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.158.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac80ab099e67ee50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-035610bbb6edf91d5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fb5a67616270b95",
            "tags": {
              "Name": "EC2-1"
            },
            "tags_all": {
              "Name": "EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-035610bbb6edf91d5"
            ]
          },
          "dependencies": [
            "aws_security_group.WEBSG",
            "aws_subnet.MySubnet1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyEC22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083eed19fc801d7a4",
            "arn": "arn:aws:ec2:us-east-2:309351180660:instance/i-02e425a601a33a1e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e425a601a33a1e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007b0c38697cd8cdb",
            "private_dns": "ip-10-0-1-33.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-3-23-114-56.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.114.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f55cc99d8232fcbb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-035610bbb6edf91d5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073418bede2263cc5",
            "tags": {
              "Name": "EC2-2"
            },
            "tags_all": {
              "Name": "EC2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-035610bbb6edf91d5"
            ]
          },
          "dependencies": [
            "aws_security_group.WEBSG",
            "aws_subnet.MySubnet2",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:309351180660:internet-gateway/igw-0c144b66205eff196",
            "id": "igw-0c144b66205eff196",
            "owner_id": "309351180660",
            "tags": {
              "Name": "My-IGW"
            },
            "tags_all": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-0737e2ed52b120d28"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ApplicationLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:309351180660:loadbalancer/app/MY-ALB/731f244dff68d9ec",
            "arn_suffix": "app/MY-ALB/731f244dff68d9ec",
            "desync_mitigation_mode": "defensive",
            "dns_name": "MY-ALB-618814478.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:309351180660:loadbalancer/app/MY-ALB/731f244dff68d9ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MY-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-035610bbb6edf91d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01fb5a67616270b95"
              },
              {
                "subnet_id": "subnet-073418bede2263cc5"
              }
            ],
            "subnets": [
              "subnet-01fb5a67616270b95",
              "subnet-073418bede2263cc5"
            ],
            "vpc_id": "vpc-0737e2ed52b120d28",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.WEBSG",
            "aws_subnet.MySubnet1",
            "aws_subnet.MySubnet2",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ALBListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:309351180660:listener/app/MY-ALB/731f244dff68d9ec/39549bff980c848a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed response content",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:309351180660:listener/app/MY-ALB/731f244dff68d9ec/39549bff980c848a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:309351180660:loadbalancer/app/MY-ALB/731f244dff68d9ec",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ApplicationLoadBalancer",
            "aws_security_group.WEBSG",
            "aws_subnet.MySubnet1",
            "aws_subnet.MySubnet2",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ALBTargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:309351180660:targetgroup/MY-ALB-TG/103f56b117e338d7",
            "arn_suffix": "targetgroup/MY-ALB-TG/103f56b117e338d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:309351180660:targetgroup/MY-ALB-TG/103f56b117e338d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MY-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0737e2ed52b120d28"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TGAttachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:309351180660:targetgroup/MY-ALB-TG/103f56b117e338d7-20230516003436359300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:309351180660:targetgroup/MY-ALB-TG/103f56b117e338d7",
            "target_id": "i-051d3d199ebb1e206"
          },
          "dependencies": [
            "aws_instance.MyEC21",
            "aws_lb_target_group.ALBTargetGroup",
            "aws_security_group.WEBSG",
            "aws_subnet.MySubnet1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TGAttachement2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:309351180660:targetgroup/MY-ALB-TG/103f56b117e338d7-20230516003436051000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:309351180660:targetgroup/MY-ALB-TG/103f56b117e338d7",
            "target_id": "i-02e425a601a33a1e1"
          },
          "dependencies": [
            "aws_instance.MyEC22",
            "aws_lb_target_group.ALBTargetGroup",
            "aws_security_group.WEBSG",
            "aws_subnet.MySubnet2",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPulicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:309351180660:route-table/rtb-08f3df8e3daea504f",
            "id": "rtb-08f3df8e3daea504f",
            "owner_id": "309351180660",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c144b66205eff196",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-Public-RT"
            },
            "tags_all": {
              "Name": "My-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737e2ed52b120d28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyIGW",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPublicSNRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfe36715a3bb1c8c",
            "route_table_id": "rtb-08f3df8e3daea504f",
            "subnet_id": "subnet-01fb5a67616270b95"
          },
          "dependencies": [
            "aws_internet_gateway.MyIGW",
            "aws_route_table.MyPulicRT",
            "aws_subnet.MySubnet1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPublicSNRouteTableAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019f6673056da89e1",
            "route_table_id": "rtb-08f3df8e3daea504f",
            "subnet_id": "subnet-073418bede2263cc5"
          },
          "dependencies": [
            "aws_internet_gateway.MyIGW",
            "aws_route_table.MyPulicRT",
            "aws_subnet.MySubnet2",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WEBSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:309351180660:security-group/sg-035610bbb6edf91d5",
            "description": "Allow HTTP(80/tcp, 8080/tcp), SSH(22/tcp)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035610bbb6edf91d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP(80/tcp)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP(8080/tcp)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH(80/tcp)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WEBSG",
            "name_prefix": "",
            "owner_id": "309351180660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WEBSG"
            },
            "tags_all": {
              "Name": "WEBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737e2ed52b120d28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MySubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:309351180660:subnet/subnet-01fb5a67616270b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fb5a67616270b95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Public-SN-1"
            },
            "tags_all": {
              "Name": "My-Public-SN-1"
            },
            "vpc_id": "vpc-0737e2ed52b120d28"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MySubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:309351180660:subnet/subnet-073418bede2263cc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073418bede2263cc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Public-SN-2"
            },
            "tags_all": {
              "Name": "My-Public-SN-2"
            },
            "vpc_id": "vpc-0737e2ed52b120d28"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:309351180660:vpc/vpc-0737e2ed52b120d28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5972775172982c2",
            "default_route_table_id": "rtb-02116154a806f5fe9",
            "default_security_group_id": "sg-0505ea9621fb5ca73",
            "dhcp_options_id": "dopt-003b887f645a4c8cf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0737e2ed52b120d28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02116154a806f5fe9",
            "owner_id": "309351180660",
            "tags": {
              "Name": "My-VPC"
            },
            "tags_all": {
              "Name": "My-VPC"
            }
          }
        }
      ]
    }
  ]
}